# stocks-portfolio

./: .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  custom_types.py  example.py  pyproject.toml  streamlit_app.py
.github/workflows/: tests.yml
classes/: __init__.py  portfolio.py  stock.py
models/: __init__.py  portfolio.py  stock.py
tests/: __init__.py  test_portfolio.py  test_stock.py
utils/: __init__.py  formatting.py  market.py  market_utils.py
